--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+	<head>
+		<meta charset="UTF-8" />
+		<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+		<meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+		<title>Cross Sourcerer</title>
+		<link rel="stylesheet" href="./index.css" />
+		<link rel="manifest" href="../manifest.json" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="../assets/icons/icon-152x152.png" />
+		<meta name="theme-color" content="white" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-title" content="Cross Sourcerer" />
+		<meta name="msapplication-TileImage" content="../assets/icons/icon-144x144.png" />
+		<meta name="msapplication-TileColor" content="#FFFFFF" />
+		<meta name="theme-color" content="white" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Hello World!</title>
+	</head>
+	<body>
+		<h1>Hello World!</h1>
+		We are using Node.js <span id="node-version"></span>, Chromium <span id="chrome-version"></span>, and Electron
+		<span id="electron-version"></span>.
 
-    <!-- You can also require other files to run in this process -->
-    <script src="./App.js"></script>
-  </body>
+		<!-- You can also require other files to run in this process -->
+		<script src="./App.js"></script>
+	</body>
 </html>
